--- a/blogapp/templates/blog_details.html
+++ b/blogapp/templates/blog_details.html
@@ -5,14 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Industrial | Teamplate</title>
+    <title>WordHaven</title>
     <meta name="description" content="">
 </head>
-
-
-
-
-
  {% block content %}
    <main>
       <!--? Hero Start -->
