--- a/blogapp/templates/blog_details.html
+++ b/blogapp/templates/blog_details.html
@@ -47,8 +47,6 @@
                            {{post.content|safe|linebreaks}}
                         </p>
 
-
-
                      </div>
                   </div>
                   <div class="navigation-top">
@@ -98,9 +96,9 @@
                   </div>
 
                   <div class="comments-area">
-                     <h4>05 Comments</h4>
+<!--                     <h4>05 Comments</h4>-->
                       {% for comment in comments %}
-       <div class="comment-list">
+                    <div class="comment-list">
                         <div class="single-comment justify-content-between d-flex">
                            <div class="user justify-content-between d-flex">
                               <div class="thumb">
@@ -220,80 +218,80 @@
                   {% endfor %}
 
                      </aside>
-                     <aside class="single_sidebar_widget tag_cloud_widget">
-                        <h4 class="widget_title" style="color: #2d2d2d;">Tag Clouds</h4>
-                        <ul class="list">
-                           <li>
-                              <a href="#">project</a>
-                           </li>
-                           <li>
-                              <a href="#">love</a>
-                           </li>
-                           <li>
-                              <a href="#">technology</a>
-                           </li>
-                           <li>
-                              <a href="#">travel</a>
-                           </li>
-                           <li>
-                              <a href="#">restaurant</a>
-                           </li>
-                           <li>
-                              <a href="#">life style</a>
-                           </li>
-                           <li>
-                              <a href="#">design</a>
-                           </li>
-                           <li>
-                              <a href="#">illustration</a>
-                           </li>
-                        </ul>
-                     </aside>
-                     <aside class="single_sidebar_widget instagram_feeds">
-                        <h4 class="widget_title" style="color: #2d2d2d;">Instagram Feeds</h4>
-                        <ul class="instagram_row flex-wrap">
-                           <li>
-                              <a href="#">
-                                 <img class="img-fluid" src="assets/img/post/post_5.png" alt="">
-                              </a>
-                           </li>
-                           <li>
-                              <a href="#">
-                                 <img class="img-fluid" src="assets/img/post/post_6.png" alt="">
-                              </a>
-                           </li>
-                           <li>
-                              <a href="#">
-                                 <img class="img-fluid" src="assets/img/post/post_7.png" alt="">
-                              </a>
-                           </li>
-                           <li>
-                              <a href="#">
-                                 <img class="img-fluid" src="assets/img/post/post_8.png" alt="">
-                              </a>
-                           </li>
-                           <li>
-                              <a href="#">
-                                 <img class="img-fluid" src="assets/img/post/post_9.png" alt="">
-                              </a>
-                           </li>
-                           <li>
-                              <a href="#">
-                                 <img class="img-fluid" src="assets/img/post/post_10.png" alt="">
-                              </a>
-                           </li>
-                        </ul>
-                     </aside>
-                     <aside class="single_sidebar_widget newsletter_widget">
-                        <h4 class="widget_title" style="color: #2d2d2d;">Newsletter</h4>
-                        <form action="#">
-                           <div class="form-group">
-                              <input type="email" class="form-control" onfocus="this.placeholder = ''"
-                                 onblur="this.placeholder = 'Enter email'" placeholder='Enter email' required>
-                           </div>
-                           <button class="button rounded-0 primary-bg text-white w-100 btn_1 boxed-btn" type="submit">Subscribe</button>
-                        </form>
-                     </aside>
+<!--                     <aside class="single_sidebar_widget tag_cloud_widget">-->
+<!--                        <h4 class="widget_title" style="color: #2d2d2d;">Tag Clouds</h4>-->
+<!--                        <ul class="list">-->
+<!--                           <li>-->
+<!--                              <a href="#">project</a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">love</a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">technology</a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">travel</a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">restaurant</a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">life style</a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">design</a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">illustration</a>-->
+<!--                           </li>-->
+<!--                        </ul>-->
+<!--                     </aside>-->
+<!--                     <aside class="single_sidebar_widget instagram_feeds">-->
+<!--                        <h4 class="widget_title" style="color: #2d2d2d;">Instagram Feeds</h4>-->
+<!--                        <ul class="instagram_row flex-wrap">-->
+<!--                           <li>-->
+<!--                              <a href="#">-->
+<!--                                 <img class="img-fluid" src="assets/img/post/post_5.png" alt="">-->
+<!--                              </a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">-->
+<!--                                 <img class="img-fluid" src="assets/img/post/post_6.png" alt="">-->
+<!--                              </a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">-->
+<!--                                 <img class="img-fluid" src="assets/img/post/post_7.png" alt="">-->
+<!--                              </a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">-->
+<!--                                 <img class="img-fluid" src="assets/img/post/post_8.png" alt="">-->
+<!--                              </a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">-->
+<!--                                 <img class="img-fluid" src="assets/img/post/post_9.png" alt="">-->
+<!--                              </a>-->
+<!--                           </li>-->
+<!--                           <li>-->
+<!--                              <a href="#">-->
+<!--                                 <img class="img-fluid" src="assets/img/post/post_10.png" alt="">-->
+<!--                              </a>-->
+<!--                           </li>-->
+<!--                        </ul>-->
+<!--                     </aside>-->
+<!--                     <aside class="single_sidebar_widget newsletter_widget">-->
+<!--                        <h4 class="widget_title" style="color: #2d2d2d;">Newsletter</h4>-->
+<!--                        <form action="#">-->
+<!--                           <div class="form-group">-->
+<!--                              <input type="email" class="form-control" onfocus="this.placeholder = ''"-->
+<!--                                 onblur="this.placeholder = 'Enter email'" placeholder='Enter email' required>-->
+<!--                           </div>-->
+<!--                           <button class="button rounded-0 primary-bg text-white w-100 btn_1 boxed-btn" type="submit">Subscribe</button>-->
+<!--                        </form>-->
+<!--                     </aside>-->
                   </div>
                </div>
             </div>
