--- a/blogapp/templates/blog_details.html
+++ b/blogapp/templates/blog_details.html
@@ -65,21 +65,21 @@
                                     <span class="lnr text-white ti-arrow-left"></span>
                                  </a>
                               </div>
-                              <div class="detials">
-                                 <p>Prev Post</p>
-                                 <a href="#">
-                                    <h4 style="color: #2d2d2d;">Space The Final Frontier</h4>
-                                 </a>
-                              </div>
-                           </div>
-                           <div
-                              class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">
-                              <div class="detials">
-                                 <p>Next Post</p>
-                                 <a href="#">
-                                    <h4 style="color: #2d2d2d;">Telescopes 101</h4>
-                                 </a>
-                              </div>
+<!--                              <div class="detials">-->
+<!--                                 <p>Prev Post</p>-->
+<!--                                 <a href="#">-->
+<!--                                    <h4 style="color: #2d2d2d;">Space The Final Frontier</h4>-->
+<!--                                 </a>-->
+<!--                              </div>-->
+<!--                           </div>-->
+<!--                           <div-->
+<!--                              class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">-->
+<!--                              <div class="detials">-->
+<!--                                 <p>Next Post</p>-->
+<!--                                 <a href="#">-->
+<!--                                    <h4 style="color: #2d2d2d;">Telescopes 101</h4>-->
+<!--                                 </a>-->
+<!--                              </div>-->
                               <div class="arrow">
                                  <a href="#">
                                     <span class="lnr text-white ti-arrow-right"></span>
